--- a/web/WEB-INF/classes/resources/text_en_US.properties
+++ b/web/WEB-INF/classes/resources/text_en_US.properties
@@ -4,15 +4,28 @@ label.computer_components = PC Components
 label.phones = Phones
 label.select_parser = Select parser:
 label.lang = Language
+
 title.app = Application
 title.authorization = Authorization
 title.registration = Registration
 title.result = Result
 title.xml = XML
+
 button.sign_in = Sing in
 button.log_in = Log in
 button.log_out = Log out
 button.parse = Parse
 button.back = Back
-button.change = Change Language
 button.main_page = Main page
+
+table.id = Id
+table.name = Name
+table.origin_country = Origin country
+table.is_critical = Critical
+table.is_peripheral = Peripheral
+table.energy_consumption = Energy consumption
+table.has_cooler = Has cooler
+table.component_group = Component group
+table.port = Port
+table.ram = RAM
+table.build_date = Build date
