--- a/web/WEB-INF/classes/resources/text_ru_RU.properties
+++ b/web/WEB-INF/classes/resources/text_ru_RU.properties
@@ -4,15 +4,28 @@ label.computer_components = Компоненты ПК
 label.phones = Телефоны
 label.select_parser = Выберите анализатор:
 label.lang = Язык
+
 title.app = Приложение
 title.authorization = Авторизация
 title.registration = Регистрация
 title.result = Результат
 title.xml = XML
+
 button.sign_in = Зарегистрироваться
 button.log_in = Войти
 button.log_out = Выйти
 button.parse = Анализировать
 button.back = Назад
-button.change  = Изменить язык
 button.main_page = Главная страница
+
+table.id = Идентификатор
+table.name = Название
+table.origin_country = Страна производителя
+table.is_critical = Критический
+table.is_peripheral = Периферийный
+table.energy_consumption = Потребление энергии
+table.has_cooler = Имеется кулер
+table.component_group = Группа компонентов
+table.port = Порт
+table.ram = ОЗУ
+table.build_date = Дата сборки
